CHANGES

release 84.6
 - when changing ownership of run folder, set gid bit on every level
 - Reporting croaks without full stacktraces for folder and folder/location

release 84.5
 - staging monitor extension:
     move qc complete runfolders from analysis to outgoing
     propagate group ownership inside the runfolder
 - staging/instrument monitor:
     remove superfluous run lanes
     assume all runs are RTA
 - perform runfolder name validation against the tracking db run record
   rather than against xml feeds; compare to expected runfolder name
   if this name is not in the database yet
 - add sample_supplier_name, sample_cohort and sample_donor_id to
   st::api::lims interface

release 84.4
 - to avoid the need to create deep directory hierarchy containing www-live
   for a live server, set dev env variable value for the Apache server
   explicitly

release 81.3
 - accessor methods for frequently used configuration file entries 
 - status monitor script and staging area daemon definition - allow for
   farm-specific variations of path prefixes for staging areas
 - staging area and status daemons use common log directory /nfs/{gs|sf}XX/log

release 81.2
 - web server configuration generalisation to allow for running on
   different clusters
 - cross-cluster staging links for both tracking and seqqc links
 - make sample name compalsory in samplesheet generation
 - provide path substitution mechanism to cope with running code on a file
   server where the abs_path may differ from the cannonical network path.

release 81.1
 - extended samplesheet contains only the Data section, Illumina
   on-instrument reference paths removed
 - factor out parsing database configuration files into a separate
   module
 - when using MySQL database in testing, do not use database configuration
   files implicitly from the user's home directory; force the caller to
   supply the location of the file
 - remove default repository root from npg::samplesheet